fix whitespace on sticky header

--- a/scss/partials/_searchbar.scss
+++ b/scss/partials/_searchbar.scss
@@ -180,7 +180,7 @@
 }
 
 .stickyheader {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
